Added bibliography using pandoc-citeproc

--- a/docs/fr_2018_06_02/index.tex
+++ b/docs/fr_2018_06_02/index.tex
@@ -27,8 +27,6 @@
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
-\usepackage{natbib}
-\bibliographystyle{plainnat}
 \usepackage{color}
 \usepackage{fancyvrb}
 \newcommand{\VerbBar}{|}
@@ -114,14 +112,15 @@
 }
 
 \setlength{\droptitle}{-2em}
-  \title{}
-  \pretitle{\vspace{\droptitle}}
-  \posttitle{}
-  \author{}
-  \preauthor{}\postauthor{}
-  \date{}
-  \predate{}\postdate{}
 
+  \title{}
+    \pretitle{\vspace{\droptitle}}
+  \posttitle{}
+    \author{}
+    \preauthor{}\postauthor{}
+    \date{}
+    \predate{}\postdate{}
+  
 \geometry{paper=a4paper, margin=2.2cm}
 \usepackage[defaultlines=10,all]{nowidow}
 \usepackage{float}
@@ -208,7 +207,7 @@ En effet, l'humain cherchait à caractériser la musique afin de pouvoir
 la conserver et de la partager. Cette science a commencé par l'écriture
 des chants hourrites sur des tablettes d'argile extraite d'Ougarit
 (actuellement Latakié, Syrie) qui remontent approximativement à 1400 av.
-J.-C. \citep{ougarit}
+J.-C. (Wikipédia 2018)
 
 \begin{figure}
 \centering
@@ -546,10 +545,10 @@ la fréquence fondamentale d'un signal.
 \hypertarget{yin}{%
 \subsection{YIN}\label{yin}}
 
-L'algorithme de YIN \emph{\citep{yin}} est une méthode robuste pour la
-reconnaissance du pitch dans le domaine temporel. Son principe est la
-séléction de fréquences candidates parmi toutes les fréquences détéctées
-sur l'intervalle de fenêtrage.
+L'algorithme de YIN \emph{(Kawahara and Cheveigné 2002)} est une méthode
+robuste pour la reconnaissance du pitch dans le domaine temporel. Son
+principe est la séléction de fréquences candidates parmi toutes les
+fréquences détéctées sur l'intervalle de fenêtrage.
 
 La méthode propose que l'expression \(x(t)-x(t+\tau)\) atteint son
 minimum quand \(\tau\) est égale à la période du signal (i.e.
@@ -572,7 +571,7 @@ recommandent un seuil de 0.1).
 \hypertarget{yin-spectrale}{%
 \subsection{YIN spectrale}\label{yin-spectrale}}
 
-L'algorithme de YIN spectrale \emph{\citep{yinfft}} est une méthode qui
+L'algorithme de YIN spectrale \emph{(Brossier 2007)} est une méthode qui
 utilise la même logique de l'algorithme de YIN et l'applique sur le
 spectre du signal.
 
@@ -692,10 +691,10 @@ La méthode consiste donc en trois étapes:
   \textbf{Peak-picking}: la selection des onsets.
 \end{enumerate}
 
-Une méthode heuristique est proposée par \citep{ismir} pour séléctionner
-les onsets, il s'agit de trouver les points \(t_n\) tels que, pour
-\(a,b,\tau\in\mathbb{N}, \delta\in{R_+}\) fixés: -
-\(x[n] = \max\limits_{n+a \leq i\leq n + b} x[i]\) -
+Une méthode heuristique est proposée par (Rosão, Ribeiro, and Matos
+2012) pour séléctionner les onsets, il s'agit de trouver les points
+\(t_n\) tels que, pour \(a,b,\tau\in\mathbb{N}, \delta\in{R_+}\) fixés:
+- \(x[n] = \max\limits_{n+a \leq i\leq n + b} x[i]\) -
 \(x[n] \geq \delta + \frac{1}{a+b+1}\sum\limits_{n+a \leq i\leq n + b} x[i]\)
 - Si \(O\) est l'ensembles d'onsets,
 \(\forall n,m\in O, \lvert n - m \rvert > \tau\)
@@ -717,7 +716,7 @@ quelques unes qui se basent sur la STFT.
 
 Il s'agit de priviligier les fréquences élevées dans un signal.
 \[ D_{HFC}[n] = \sum\limits_{k=1}^{N}k\cdot\left\lvert X[n,k]\right\rvert^2 \]
-\citep{hfc}
+(Masri 1996)
 
 \hypertarget{phase-deviation-phi}{%
 \subsubsection{Phase Deviation (Phi)}\label{phase-deviation-phi}}
@@ -729,7 +728,7 @@ complex de la STFT, on note \[ \varphi(t, f) = \mathrm{arg}(X(t, f)) \]
 \[ \mathrm{princarg}(\theta) = \pi + ((\theta + \pi) mod (-2\pi)) \]
 donc la ODS de phase se calcule par la formule:
 \[ D_{\Phi}[n] = \sum\limits_{k=0}^{N}\left\lvert \hat{\varphi}[n, k] \right\rvert \]
-\citep{phase}
+(Bello and Sandler 2003)
 
 Dans notre implémentation, nous avons approximé la dérivée partielle
 seconde de la phase par un schéma de Taylor d'ordre 2.
@@ -746,7 +745,7 @@ définit la prédiction :
 
 Donc la distance complexe se calcule:
 \[ D_{\mathbb{C}}[n] = \sum\limits_{k=0}^{N} \left\lvert  \hat{X}[n, k] - X[n, k] \right\rvert ^2 \]
-\citep{complex}
+(Duxbury et al. 2003)
 
 \hypertarget{thresholding}{%
 \subsection{Thresholding}\label{thresholding}}
@@ -1287,7 +1286,8 @@ Les résultats sont assez satisfaisants. En revanche, ce domaine a du
 fort potentiel de développement. Notamment le cas de musique pholyphone,
 et dans la reconnaissance du rythme. D'après ma recherche, le plus
 intéressant sera de faire intervenir de l'Intelligence Artificielle, en
-particulier la technologie Long short-term Memory (LSTM). \citep{lstm}
+particulier la technologie Long short-term Memory (LSTM). (Wikipedia
+contributors 2018)
 
 \hypertarget{apport-personnel}{%
 \subsection{Apport personnel}\label{apport-personnel}}
@@ -1300,8 +1300,44 @@ Nous vous remercions sincèrement pour cette opportunité.
 
 \pagebreak
 
-\renewcommand\refname{Références}
-\bibliography{references.bib}
+\hypertarget{references}{%
+\section*{Références}\label{references}}
+\addcontentsline{toc}{section}{Références}
+
+\hypertarget{refs}{}
+\leavevmode\hypertarget{ref-phase}{}%
+Bello, Juan, and Mark Sandler. 2003. ``Phase-Based Note Onset Detection
+for Music Signals.''
+
+\leavevmode\hypertarget{ref-yinfft}{}%
+Brossier, Paul. 2007. ``Automatic Annotation of Musical Audio for
+Interactive Applications.''
+
+\leavevmode\hypertarget{ref-complex}{}%
+Duxbury, Chris, Juan Bello, Mike Davies, and Mark Sandler. 2003.
+``Complex Domain Onset Detection for Musical Signals.''
+
+\leavevmode\hypertarget{ref-yin}{}%
+Kawahara, Hideki, and Alain de Cheveigné. 2002. ``YIN, a Fundamental
+Frequency Estimator for Speech and Music.''
+
+\leavevmode\hypertarget{ref-hfc}{}%
+Masri, Paul. 1996. ``Computer Modeling of Sound for Transformation and
+Synthesis of Musical Signal.''
+
+\leavevmode\hypertarget{ref-ismir}{}%
+Rosão, Carlos, Ricardo Ribeiro, and David Martins de Matos. 2012.
+``Influence of Peak Selection Methods on Onset Detection.''
+
+\leavevmode\hypertarget{ref-lstm}{}%
+Wikipedia contributors. 2018. ``Long Short-Term Memory --- Wikipedia,
+the Free Encyclopedia.''
+\url{https://en.wikipedia.org/w/index.php?title=Long_short-term_memory\&oldid=844880987}.
+
+\leavevmode\hypertarget{ref-ougarit}{}%
+Wikipédia. 2018. ``Chants Hourrites --- Wikipédia, L'encyclopédie
+Libre.''
+\url{http://fr.wikipedia.org/w/index.php?title=Chants_hourrites\&oldid=145548895}.
 
 
 \end{document}
