--- a/docs/fr_2018_06_02/index.tex
+++ b/docs/fr_2018_06_02/index.tex
@@ -501,6 +501,7 @@ On trace le signal à l'aide de la librairie \texttt{matplotlib}
 \begin{Shaded}
 \begin{Highlighting}[]
 \ImportTok{from}\NormalTok{ matplotlib }\ImportTok{import}\NormalTok{ pyplot }\ImportTok{as}\NormalTok{ plt}
+\NormalTok{plt.clf()}
 \NormalTok{plt.plot(t, x)}
 \NormalTok{plt.show()}
 \end{Highlighting}
