--- a/docs/main.rmd
+++ b/docs/main.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Automatic Music Transcription"
 lang: en-US
-bibliography: biblio/ref.bib
+bibliography: ref.bib
 biblio-style: "apalike"
 link-citations: true
 date: 12 March 2020
