finished mono/multipitch code + onsets and explained monopitch w/ code

--- a/docs/include/math.tex
+++ b/docs/include/math.tex
@@ -3,6 +3,12 @@
 \def\N{\mathbb{N}}
 \def\Z{\mathbb{Z}}
 
+\def\x{\tilde{x}}
+\def\w{\omega}
+\def\phi{\varphi}
+
+\def\dt{\mathrm{d}t}
+
 \def\pp#1{\left(#1\right)}
 \def\sset#1{\left\{#1\right\}}
 \def\vset#1#2{\sset{#1\left\lvert#2\right.}}
@@ -12,3 +18,13 @@
 \def\dotp#1#2{\left\langle#1{;}#2\right\rangle}
 
 \def\pmat#1{\begin{pmatrix}#1\end{pmatrix}}
+
+\def\qtext#1{\quad\text{#1}\quad}
+
+
+\def\f{\boldsymbol{f}}
+\def\ff{\f\hspace{-2pt}\f}
+\def\mf{\boldsymbol{mf}}
+\def\mp{\boldsymbol{mp}}
+\def\p{\boldsymbol{p}}
+\def\piu{pi\grave{u}~}
