--- a/docs/ref.bib
+++ b/docs/ref.bib
@@ -1,5 +1,5 @@
 
-@article{benetos_automatic_2013,
+@article{benetos_2013,
 	title = {Automatic music transcription: {Challenges} and future directions},
 	volume = {41},
 	shorttitle = {Automatic music transcription},
@@ -19,7 +19,7 @@
 	file = {Citeseer - Snapshot:/home/rand/Zotero/storage/PNFK4EQD/summary.html:text/html;Citeseer - Full Text PDF:/home/rand/Zotero/storage/82FMYHF9/Brossier - 2006 - Automatic Annotation of Musical Audio for Interact.pdf:application/pdf}
 }
 
-@article{yeh_multiple_nodate,
+@article{yeh_thesis,
 	title = {Multiple {Fundamental} {Frequency} {Estimation} of {Polyphonic} {Recordings}},
 	language = {en},
 	author = {Yeh, Chunghsin},
@@ -65,4 +65,141 @@ La hauteur d'un son périodique est étroitement liée à sa période. Pour perc
 	keywords = {Computational auditory scene analysis, Fundamental frequency, Pitch perception, Speech analysis},
 	pages = {175--185},
 	file = {ScienceDirect Snapshot:/home/rand/Zotero/storage/YDEP3AVT/S0167639398000740.html:text/html;de Cheveigné and Kawahara - 1999 - Multiple period estimation and pitch perception mo.pdf:/home/rand/Zotero/storage/BR9ZBRLL/de Cheveigné and Kawahara - 1999 - Multiple period estimation and pitch perception mo.pdf:application/pdf}
+}
+
+@article{chunghsin_yeh_multiple_2010,
+	title = {Multiple {Fundamental} {Frequency} {Estimation} and {Polyphony} {Inference} of {Polyphonic} {Music} {Signals}},
+	volume = {18},
+	issn = {1558-7916},
+	url = {http://ieeexplore.ieee.org/document/5200519/},
+	doi = {10.1109/TASL.2009.2030006},
+	abstract = {This article presents a frame-based system for estimating multiple fundamental frequencies (F0s) of polyphonic music signals based on the STFT (short-time Fourier transform) representation. To estimate the number of sources along with their F0s, it is proposed to estimate the noise level beforehand and then jointly evaluate all the possible combinations among pre-selected F0 candidates. Given a set of F0 hypotheses, their hypothetical partial sequences are derived, taking into account where partial overlap may occur. A score function is used to select the plausible sets of F0 hypotheses. To infer the best combination, hypothetical sources are progressively combined and iteratively veriﬁed. A hypothetical source is considered valid if it either explains more energy than the noise, or improves signiﬁcantly the envelope smoothness once the overlapping partials are treated. The proposed system has been submitted to MIREX (Music Information Retrieval Evaluation eXchange) 2007 and 2008 contests where the accuracy has been evaluated with respect to the number of sources inferred and the precision of the F0s estimated. The encouraging results demonstrate its competitive performance among the state-of-the-art methods.},
+	language = {en},
+	number = {6},
+	urldate = {2020-03-06},
+	journal = {IEEE Transactions on Audio, Speech, and Language Processing},
+	author = {{Chunghsin Yeh} and Roebel, Axel and Rodet, Xavier},
+	month = aug,
+	year = {2010},
+	pages = {1116--1126},
+	file = {Chunghsin Yeh et al. - 2010 - Multiple Fundamental Frequency Estimation and Poly.pdf:/home/rand/Zotero/storage/UN98Y99Q/Chunghsin Yeh et al. - 2010 - Multiple Fundamental Frequency Estimation and Poly.pdf:application/pdf}
+}
+
+@article{yin_2002,
+	title = {{YIN}, a fundamental frequency estimator for speech and music},
+	volume = {111},
+	issn = {0001-4966},
+	url = {https://asa.scitation.org/doi/10.1121/1.1458024},
+	doi = {10.1121/1.1458024},
+	number = {4},
+	urldate = {2020-03-06},
+	journal = {The Journal of the Acoustical Society of America},
+	author = {de Cheveigné, Alain and Kawahara, Hideki},
+	month = apr,
+	year = {2002},
+	pages = {1917--1930},
+	file = {Snapshot:/home/rand/Zotero/storage/FFLXQKIS/1.html:text/html;Submitted Version:/home/rand/Zotero/storage/2LI8UADG/de Cheveigné and Kawahara - 2002 - YIN, a fundamental frequency estimator for speech .pdf:application/pdf}
+}
+
+@article{ross_average_1974,
+	title = {Average magnitude difference function pitch extractor},
+	volume = {22},
+	issn = {0096-3518},
+	doi = {10.1109/TASSP.1974.1162598},
+	abstract = {This paper describes a method for using the average magnitude difference function (AMDF) and associated decision logic to estimate the pitch period of voiced speech sounds. The AMDF is a variation on autocorrelation analysis where, instead of correlating the input speech at various delays (where multiplications and summations are formed at each value of delay), a difference signal is formed between the delayed speech and the original and, at each delay, the absolute magnitude of the difference is taken. The difference signal is always zero at delay = π, and exhibits deep nulls at delays corresponding to the pitch period of voiced sounds. Some of the reasons the AMDF is attractive include the following. 1) It is a simple measurement which gives a good estimate of pitch contour, 2) it has no multiply operations, 3) its dynamic range characteristics are suitable for implementation on a 16-bit machine, and 4) the nature of its operations makes it suitable for implementation on a programmable processor or in special purpose hardware. The implementation of the AMDF pitch extractor (nonreal-time simulation and real-time) is described and experimental results presented to illustrate its basic measurement properties.},
+	number = {5},
+	journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
+	author = {Ross, M. and Shaffer, H. and Cohen, A. and Freudberg, R. and Manley, H.},
+	month = oct,
+	year = {1974},
+	keywords = {Speech analysis, Autocorrelation, Data processing, Delay, Dynamic range, Filters, Humans, Logic, Signal analysis, Speech synthesis},
+	pages = {353--362},
+	file = {IEEE Xplore Abstract Record:/home/rand/Zotero/storage/G65SNGXD/1162598.html:text/html;Ross et al. - 1974 - Average magnitude difference function pitch extrac.pdf:/home/rand/Zotero/storage/D4YHAU8P/Ross et al. - 1974 - Average magnitude difference function pitch extrac.pdf:application/pdf}
+}
+
+@article{lahat_spectral_1987,
+	title = {A spectral autocorrelation method for measurement of the fundamental frequency of noise-corrupted speech},
+	doi = {10.1109/TASSP.1987.1165224},
+	abstract = {A method for measurement of the fundamental frequency of a voiced speech signal corrupted by high levels of additive white Gaussian noise is described. The method is based on flattening the spectrum of the signal by a bank of bandpass lifters and extracting the pitch frequency from autocorrelation functions calculated at the output of the lifters. A smoothing modified median filter is applied to the calculated pitch frequency contour to result in an improvement in the accuracy of the method. A byproduct of the pitch tracker is a voiced/ unvoiced classifier. The maximum and the variance of the autocorrelation function maxima, over the bank of lifters, serve as the basis for voiced/unvoiced classification by making use of a two-dimensional, nearest-neighbor pattern recognition approach. Results are presented for fundamental frequency measurement and voiced/unvoiced classification for several signal-to-noise ratios.},
+	journal = {IEEE Trans. Acoustics, Speech, and Signal Processing},
+	author = {Lahat, M. and Niederjohn, Russell J. and Krubsack, David A.},
+	year = {1987},
+	file = {Lahat et al. - 1987 - A spectral autocorrelation method for measurement .pdf:/home/rand/Zotero/storage/P68WM637/Lahat et al. - 1987 - A spectral autocorrelation method for measurement .pdf:application/pdf}
+}
+
+@article{noll_cepstrum_1967,
+	title = {Cepstrum {Pitch} {Determination}},
+	volume = {41},
+	issn = {0001-4966},
+	url = {https://asa.scitation.org/doi/abs/10.1121/1.1910339},
+	doi = {10.1121/1.1910339},
+	number = {2},
+	urldate = {2020-03-06},
+	journal = {The Journal of the Acoustical Society of America},
+	author = {Noll, A. Michael},
+	month = feb,
+	year = {1967},
+	pages = {293--309},
+	file = {Snapshot:/home/rand/Zotero/storage/24XKV4KR/1.html:text/html;Noll - 1967 - Cepstrum Pitch Determination.pdf:/home/rand/Zotero/storage/FPVJLR38/Noll - 1967 - Cepstrum Pitch Determination.pdf:application/pdf}
+}
+
+@article{schroeder_period_1968,
+	title = {Period histogram and product spectrum: new methods for fundamental-frequency measurement.},
+	shorttitle = {Period histogram and product spectrum},
+	doi = {10.1121/1.1910902},
+	abstract = {The fundamental frequency of a periodic signal whose fundamental component is not available for measurement can be determined by measuring the frequencies of its higher harmonic components and computing the largest common divider of these frequencies. Similarly, the fundamental period can be determined by measuring the periods of individual harmonics and finding their smallest common multiple. Several methods of fundamental frequency and period measurement, based on these concepts, are described in this paper. The results of computer simulations and analog instrumentations indicate that these new methods. at a considerable reduction in complexity, compare favorably with, and in some cases exceed, the capabilities of cepstrum analysis.},
+	journal = {The Journal of the Acoustical Society of America},
+	author = {Schroeder, Manfred R.},
+	year = {1968},
+	file = {Schroeder - 1968 - Period histogram and product spectrum new methods.pdf:/home/rand/Zotero/storage/72U5CIUE/Schroeder - 1968 - Period histogram and product spectrum new methods.pdf:application/pdf}
+}
+
+@article{oppenheim_frequency_2004,
+	title = {From frequency to quefrency: a history of the cepstrum},
+	volume = {21},
+	issn = {1558-0792},
+	shorttitle = {From frequency to quefrency},
+	doi = {10.1109/MSP.2004.1328092},
+	abstract = {The idea of the log spectrum or cepstral averaging has been useful in many applications such as audio processing, speech processing, speech recognition, and echo detection for the estimation and compensation of convolutional distortions. To suggest what prompted the invention of the term cepstrum, this article narrates the historical and mathematical background that led to its discovery. The computations of earlier simple echo representations have shown that the spectrum representation domain results does not belong in the frequency or time domain. Bogert et al. (1963) chose to refer to it as quefrency domain and later termed the spectrum of the log of a time waveform as the cepstrum. The article also recounts the analysis of Al Oppenheim in relation to the cepstrum. It was in his theory for nonlinear signal processing, referred to as homomorphic systems, that the realization of the characteristic system of homomorphic convolution was reminiscent of the cepstrum. To retain both the relationship to the work of Bogart et al. and the distinction, the term power cepstrum was eventually applied to the nonlinear mapping in homomorphic deconvolution . While most of the terms in the glossary have faded into the background, the term cepstrum has survived and has become part of the digital signal processing lexicon.},
+	number = {5},
+	journal = {IEEE Signal Processing Magazine},
+	author = {Oppenheim, A.V. and Schafer, R.W.},
+	month = sep,
+	year = {2004},
+	keywords = {Signal processing, cepstral analysis, Cepstral analysis, cepstrum, Cepstrum, Convolution, convolutional distortions, Deconvolution, digital signal processing lexicon, Frequency, History, homomorphic systems, log spectrum, Nonlinear distortion, nonlinear signal processing, signal processing, Speech processing, Speech recognition, time waveform},
+	pages = {95--106},
+	file = {IEEE Xplore Abstract Record:/home/rand/Zotero/storage/XVH62WJU/1328092.html:text/html;Oppenheim and Schafer - 2004 - From frequency to quefrency a history of the ceps.pdf:/home/rand/Zotero/storage/6I7YUVCF/Oppenheim and Schafer - 2004 - From frequency to quefrency a history of the ceps.pdf:application/pdf}
+}
+
+@misc{noauthor_feynman_nodate,
+	title = {The {Feynman} {Lectures} on {Physics} {Vol}. {I} {Ch}. 47: {Sound}. {The} wave equation},
+	url = {https://www.feynmanlectures.caltech.edu/I_47.html},
+	urldate = {2020-03-08},
+	file = {The Feynman Lectures on Physics Vol. I Ch. 47\: Sound. The wave equation:/home/rand/Zotero/storage/QDYKH6FK/I_47.html:text/html}
+}
+
+@misc{wiki:nyquistshannon,
+	title = {Nyquist–{Shannon} sampling theorem},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Nyquist%E2%80%93Shannon_sampling_theorem&oldid=941933031},
+	abstract = {In the field of digital signal processing, the sampling theorem is a fundamental bridge between continuous-time signals and discrete-time signals. It establishes a sufficient condition for a sample rate that permits a discrete sequence of samples to capture all the information from a continuous-time signal of finite bandwidth.
+Strictly speaking, the theorem only applies to a class of mathematical functions having a Fourier transform that is zero outside of a finite region of frequencies. Intuitively we expect that when one reduces a continuous function to a discrete sequence and interpolates back to a continuous function, the fidelity of the result depends on the density (or sample rate) of the original samples. The sampling theorem introduces the concept of a sample rate that is sufficient for perfect fidelity for the class of functions that are bandlimited to a given bandwidth, such that no actual information is lost in the sampling process. It expresses the sufficient sample rate in terms of the bandwidth for the class of functions. The theorem also leads to a formula for perfectly reconstructing the original continuous-time function from the samples.
+Perfect reconstruction may still be possible when the sample-rate criterion is not satisfied, provided other constraints on the signal are known. (See § Sampling of non-baseband signals below and compressed sensing.) In some cases (when the sample-rate criterion is not satisfied), utilizing additional constraints allows for approximate reconstructions. The fidelity of these reconstructions can be verified and quantified utilizing Bochner's theorem.The name Nyquist–Shannon sampling theorem honours Harry Nyquist and Claude Shannon although it had already been discovered in 1933 by Vladimir Kotelnikov. The theorem was also discovered independently by E. T. Whittaker and by others. It is thus also known by the names Nyquist–Shannon–Kotelnikov, Whittaker–Shannon–Kotelnikov, Whittaker–Nyquist–Kotelnikov–Shannon, and cardinal theorem of interpolation.},
+	language = {en},
+	urldate = {2020-03-08},
+	journal = {Wikipedia},
+	month = feb,
+	year = {2020},
+	note = {Page Version ID: 941933031},
+	file = {Snapshot:/home/rand/Zotero/storage/I3RNMMYI/index.html:text/html}
+}
+
+@article{salamon_melody_nodate,
+	title = {Melody {Extraction} from {Polyphonic} {Music} {Signals} using {Pitch} {Contour} {Characteristics}},
+	abstract = {We present a novel system for the automatic extraction of the main melody from polyphonic music recordings. Our approach is based on the creation and characterisation of pitch contours, time continuous sequences of pitch candidates grouped using auditory streaming cues. We deﬁne a set of contour characteristics and show that by studying their distributions we can devise rules to distinguish between melodic and non-melodic contours. This leads to the development of new voicing detection, octave error minimisation and melody selection techniques.},
+	language = {en},
+	journal = {IEEE TRANSACTIONS ON AUDIO},
+	author = {Salamon, Justin and Gomez, Emilia},
+	pages = {12},
+	file = {Salamon and Gomez - Melody Extraction from Polyphonic Music Signals us.pdf:/home/rand/Zotero/storage/U2AYQ8Z3/Salamon and Gomez - Melody Extraction from Polyphonic Music Signals us.pdf:application/pdf}
 }
